# fingerprint-suite

./: .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  console  eslint.config.mjs  jest.config.js  lerna.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  shields.json  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  turbo.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/actions/pnpm-install/: action.yml
.github/workflows/: browserforge-compat-test.yml  bump-python-package-after-model-update.yaml  check-pr-title.yml  docs.yml  e2e-benchmark.yml  model-updater.yml  publish-to-npm.yaml  publish.yml  release-publish.yml  release_python.yaml  test-and-release.yml  test-and-sync.yml  update-new-issue.yml
apify_fingerprint_datapoints/: CHANGELOG.md  README.md  __init__.py
docs/: generator.md  headergen.md  headergenREADME.md  injector.md  injectorREADME.md
docs/examples/: generative.md  generatorREADME.md  injectorREADME.md
docs/guides/: fingerprint-generator.md  fingerprint-injector.md  generator.md  header-generator.md  headergen.md  injector.md
fingerprint_datapoints/: README.md  __init__.py
scripts/: copy.ts  netgen.sh  netgen.ts  publish.sh  typescript_fixes.mjs
test/antibot-services/: antibot.js
test/antibot-services/live-testing/: README.md  cloudflare-websites.csv  cloudflare.js  cloudflare.ts  misc.js  report.html  speed.js
test/fingerprint-generator/: generation.test.ts
test/fingerprint-injector/: crossbrowser.test.ts  fingerprint-injector.test.ts  test.html  tsconfig.json
test/generative-bayesian-network/: generation.test.ts  testDataset.csv  testNetworkDefinition.json  testNetworkStructureDefinition.json
test/generator-networks-creator/: generator-networks-creator.test.ts  record-schema.test.ts  screen-viewport.test.ts
test/header-generator/: browser-list.test.ts  generation.test.ts  presets.test.ts  tsconfig.json
test/reference/: package-lock.json  package.json  tsconfig.json  vite.config.ts
test/reference/src/: index.ts
test/reference/static/: index.html  layout.ejs  main.js
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/src/pages/: index.tsx
website/tools/utils/: createHref.js  externalLink.js
(+9 files in other folders)
